# ShapeEngine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  xmake.lua
Core/: BinaryArchive.cpp  BinaryArchive.h  Logger.h
GameplayFramework/: Actor.cpp  Application.cpp  Application.h  World.h
GameplayFramework/Components/: ActorComponent.h
Prompts/: Agent-CppGameplayCoder.md  Agent-EngineArchitect.md  Agent-GameDesigner.md  Aim-Engine-Design.md  ShapeGame_Init.md
src/: main.cpp  test.cpp
src/Components/: Shape.h  Transform.h
src/Core/: Archive.h  BaseComponents.h  Fwd.h  GameContext.cpp  GameContext.h  Logger.cpp  MathUtil.cpp  MathUtil.h  MetaRegistry.h  Object.cpp  Object.h  ShapeComponents.h  SystemBase.h  TimerSystem.cpp  TimerSystem.h
src/Core/Input/: InputAction.h  InputContext.cpp  InputContext.h  InputSystem.cpp  InputSystem.h
src/Core/Renderer/: LineRenderer.cpp  LineRenderer.h  PolygonRenderer.cpp  PolygonRenderer.h  RenderSystem.cpp  RenderSystem.h
src/Core/Timer/: Timer.h  TimerSystem.cpp  TimerSystem.h
src/GameplayFramework/: Actor.h  GameInstance.cpp  GameInstance.h  World.cpp
src/GameplayFramework/Components/: ActorComponent.cpp
src/ShapeEngine/: CMakeLists.txt
src/ShapeEngine/App/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h  DynamicLibrary.cpp  DynamicLibrary.h  EngineMain.cpp  IPlugin.h  IPrimaryGameModule.h  PluginBase.h
src/ShapeEngine/Config/: DefaultEngine.toml
src/ShapeEngine/Core/: Archive.cpp  Archive.h  BinaryArchive.cpp  BinaryArchive.h  EngineTypes.h  GameClock.cpp  GameClock.h  GameTime.h  ISubsystem.h  Logger.cpp  Logger.h  Object.cpp  Object.h  PlatformDefine.h  SubsystemManager.cpp  SubsystemManager.h  TimerManager.cpp  TimerManager.h
src/ShapeEngine/Core/Coroutine/: Task.h
src/ShapeEngine/Module/: IModuleInterface.h  IPlatformModule.h  ModuleManager.cpp  ModuleManager.h  PluginModuleRegistry.h
src/ShapeEngine/Service/: ServiceLocator.cpp  ServiceLocator.h  ServiceRegistry.cpp  ServiceRegistry.h
src/ShapeGameDemo/: CMakeLists.txt  main.cpp
src/ShapeGameDemo/Components/: RenderComponent.h  TransformComponent.h
src/ShapeGameDemo/Core/: Application.cpp  Application.h  Log.cpp  Log.h  Platform.h
src/ShapeGameDemo/Renderer/: Renderer2D.cpp  Renderer2D.h
src/ShapeGameDemo/Renderer/Shaders/: fs_basic_color.sc  vs_basic_color.sc
src/ShapeGameDemo/Systems/: RenderSystem.h
src/ShapeHost/: CMakeLists.txt  main.cpp
src/ShapePlugins/: CMakeLists.txt
src/ShapePlugins/ShapePlatform/: CMakeLists.txt  PlatformDefine.h  PlatformModule.cpp  PlatformModule.h  PlatformPlugin.cpp  PlatformPlugin.h  ShapePlatform.seplugin
src/Systems/: RenderSystem.cpp  RenderSystem.h  RotateSystem.cpp  RotateSystem.h  System.cpp  System.h  TransformSystem.cpp  TransformSystem.h
